# c-flake

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  shell.html
.ccls-cache/@@home@deck@Documents@untitled-c-project/: @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@floatn-common.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@floatn.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@libc-header-start.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@long-double.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@stdio_lim.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@time64.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@timesize.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@types.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@types@FILE.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@types@__FILE.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@types@__fpos64_t.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@types@__fpos_t.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@types@__mbstate_t.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@types@cookie_io_functions_t.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@types@struct_FILE.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@typesizes.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@bits@wordsize.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@features-time64.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@features.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@gnu@stubs-64.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@gnu@stubs.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@stdc-predef.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@stdio.h.blob  @nix@store@1vp54ln0frvhzgasr2a377mfbwvqdm6i-glibc-2.39-52-dev@include@sys@cdefs.h.blob  @nix@store@5rfvclans542pl4vhld3aaxlr2mif9k4-clang-14.0.6-lib@lib@clang@14.0.6@include@stdarg.h.blob  @nix@store@5rfvclans542pl4vhld3aaxlr2mif9k4-clang-14.0.6-lib@lib@clang@14.0.6@include@stddef.h.blob
.ccls-cache/@home@deck@Documents@untitled-c-project/: src@app.h.blob  src@main.c  src@main.c.blob  tests@sample.cc.blob
src/: app.h  hello.c
tests/: sample.cc
